Fix issue with opening inventory from battle result modal

--- a/src/app/pages/home/location-modal/dungeon-modal/dungeon-modal.component.html
+++ b/src/app/pages/home/location-modal/dungeon-modal/dungeon-modal.component.html
@@ -43,7 +43,7 @@
           </ion-button>
         </ion-col>
         <ion-col>
-          <ion-button expand="block" fill="outline" color="dark" (click)="openCharacterModal()" [disabled]="loading">
+          <ion-button expand="block" fill="outline" color="dark" (click)="changeEquipment()" [disabled]="loading">
             <ion-icon slot="start" src="/assets/icon/switch-weapon.svg"></ion-icon> Change equipment
           </ion-button>
         </ion-col>
