--- a/src/app/pages/home/journal-modal/journal-modal.component.html
+++ b/src/app/pages/home/journal-modal/journal-modal.component.html
@@ -21,6 +21,7 @@
       </ion-col>
       <ion-col>
         <ion-label>{{runestone.name}}</ion-label>
+        <p class="detail-line runestone-quote"><i>{{runestone.text}}</i></p>
       </ion-col>
     </ion-row>
   </ion-grid>
