Refactor boot sequence, login, route guards

--- a/src/app/pages/main-menu/main-menu-page.component.html
+++ b/src/app/pages/main-menu/main-menu-page.component.html
@@ -1,4 +1,4 @@
-<ion-content *ngIf="!userService.loggedIn" class="ion-padding login-page">
+<ion-content class="ion-padding login-page">
   <!--
   <ion-accordion-group class="login-debug">
     <ion-accordion value="first">
@@ -19,15 +19,43 @@
     <h1>RealmWalker</h1>
   </ion-text>
 
-  <ng-container *ngIf="auth.isAuthenticated$ | async; else loggedOut">
-    <!--
-    <ion-button color="dark" expand="full" (click)="auth.logout({ logoutParams: { returnTo: document.location.origin } })">
-      Log out
-    </ion-button>
-    -->
+  <ng-container>
+    <p *ngIf="location.permissionsOK; else locationPermissionError">🟢 Permissions OK</p>
+    <ng-template #locationPermissionError>
+      <p>🔴 Missing location permissions</p>
+      <ion-button (click)="location.setup()">Grant permissions</ion-button>
+    </ng-template>
+
+    <p *ngIf="location.tracking; else locationNotTracking">🟢 Location service active</p>
+    <ng-template #locationNotTracking>
+      <p>🔴 Location service not working</p>
+    </ng-template>
+
+    <p *ngIf="auth.isAuthenticated$ | async; else notAuthenticated">
+      🟢 Logged in as {{ (auth.user$ | async)?.email || '' | obfuscateEmail }}
+    </p>
+    <ng-template #notAuthenticated>
+      <p>🔴 Not logged in</p>
+    </ng-template>
+
+    <p *ngIf="userService.loggedIn; else notConnected">
+      🟢 Connected to game server
+    </p>
+    <ng-template #notConnected>
+      <p>🔴 Not connected to game server</p>
+    </ng-template>
   </ng-container>
 
-  <ng-template #loggedOut>
-    <ion-button color="dark" expand="full" (click)="handleLogin()" class="login-button">Log in</ion-button>
-  </ng-template>
+  <ion-button *ngIf="(auth.isAuthenticated$ | async) === false" color="dark" expand="full" (click)="userLoginAction()" class="login-button">
+    Log in
+  </ion-button>
+
+  <ion-button *ngIf="(auth.isAuthenticated$ | async)" color="dark" expand="full" (click)="auth.logout({ logoutParams: { returnTo: document.location.origin } })">
+    Log out
+  </ion-button>
+
+  <ion-button *ngIf="(auth.isAuthenticated$ | async) && userService.loggedIn && location.tracking" color="danger" expand="full" (click)="launchGame()" class="login-button">
+    Play now
+  </ion-button>
+
 </ion-content>
