--- a/src/app/pages/main-menu/main-menu-page.component.scss
+++ b/src/app/pages/main-menu/main-menu-page.component.scss
@@ -1,5 +1,6 @@
 .login-page {
   --background: url("/assets/strawberry-battlefield.png") 0 0/100% 100% no-repeat;
+  --color: black;
 }
 .login-debug {
   color: white;
