--- a/src/app/pages/main-menu/main-menu-page.component.scss
+++ b/src/app/pages/main-menu/main-menu-page.component.scss
@@ -10,7 +10,13 @@ h1 {
   text-align: center;
   margin-top: 7em;
 }
-.login-button {
-  margin-top: 16em;
+.status-lights {
+  margin-top: 3em;
+}
+.controls {
+  margin-top: 2em;
+}
+ion-button {
+  margin: 1em auto;
   opacity: 0.8;
 }
