--- a/src/app/pages/settings/settings.page.html
+++ b/src/app/pages/settings/settings.page.html
@@ -51,5 +51,6 @@
 <ion-footer>
   <p><a (click)="goToCredits()">Credits</a></p>
   <p>User ID: {{activeUser?.id}}</p>
+  <ion-button expand="block" fill="solid" color="light" (click)="goToMainMenu()">Go to menu screen</ion-button>
   <ion-button expand="block" fill="solid" color="light" (click)="logout()">Log out</ion-button>
 </ion-footer>
