--- a/src/app/pages/battle/battle.page.html
+++ b/src/app/pages/battle/battle.page.html
@@ -1,17 +1,73 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>battle</ion-title>
-    <ion-button size="small" (click)="loadBattle()"></ion-button>
+    <ion-button size="small" (click)="loadBattle()">
+      <ion-icon name="reload-outline"></ion-icon>
+    </ion-button>
+    <ion-button size="small" (click)="goToMap()">
+      <ion-icon name="exit-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">battle</ion-title>
+      <ion-title size="large">Battle</ion-title>
     </ion-toolbar>
   </ion-header>
-  <div *ngIf="battle">
-    Battle: {{ battle | json }}
-  </div>
+
+  <ng-container *ngIf="battle">
+    <!-- Status Summary -->
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>Battle vs {{ battle.opponent?.name }}</ion-card-title>
+        <ion-card-subtitle>Status: {{ battle.status }}</ion-card-subtitle>
+      </ion-card-header>
+    </ion-card>
+
+    <!-- If it's the player's turn -->
+    <ng-container *ngIf="battle.nextStep === 'your_turn'">
+      <ion-card>
+        <ion-card-header>
+          <ion-card-title>It's your turn!</ion-card-title>
+          <ion-card-subtitle>Choose an action</ion-card-subtitle>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6" *ngFor="let action of battle.availableActions">
+                <ion-button expand="block" color="primary" (click)="selectAction(action)">
+                  {{ action.label }}
+                </ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </ion-card-content>
+      </ion-card>
+    </ng-container>
+
+    <!-- Waiting for opponent -->
+    <ng-container *ngIf="battle.nextStep === 'waiting'">
+      <ion-card color="light">
+        <ion-card-content class="ion-text-center">
+          <ion-spinner name="crescent"></ion-spinner>
+          <p>Waiting for opponent...</p>
+        </ion-card-content>
+      </ion-card>
+    </ng-container>
+
+    <!-- Battle ended -->
+    <ng-container *ngIf="battle.nextStep === 'concluded'">
+      <ion-card color="success">
+        <ion-card-header>
+          <ion-card-title>Battle Concluded</ion-card-title>
+        </ion-card-header>
+        <ion-card-content class="ion-text-center">
+          <p>🎉 You survived the battle!</p>
+          <ion-button expand="block">View Results</ion-button>
+        </ion-card-content>
+      </ion-card>
+    </ng-container>
+  </ng-container>
 </ion-content>
